--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -455,7 +455,6 @@
   font-size: 20px;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: 10px;
 }
 
 .nb-notification {
